--- a/src/Styles/dashboard/UserPopup.scss
+++ b/src/Styles/dashboard/UserPopup.scss
@@ -18,7 +18,7 @@
     text-transform: unset;
 
     &:hover {
-      transform: translateX(-50%) scale(0.93) !important;
+      transform: translateX(-50%) scale(0.93);
     }
   }
 
